--- a/package.json
+++ b/package.json
@@ -4,17 +4,24 @@
   "private": true,
   "dependencies": {
     "@emailjs/browser": "^3.6.2",
+    "@fortawesome/fontawesome-free": "^6.5.2",
+    "@material-tailwind/react": "^3.0.0-beta.10",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "emailjs": "^4.0.0",
     "framer-motion": "^6.3.15",
     "number-counter": "^1.0.3",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-focus-lock": "^2.12.1",
+    "react-hook-form": "^7.51.5",
+    "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.2.1",
     "react-onclickoutside": "^6.12.2",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.8.7",
+    "react-toastify": "^10.0.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
